# LLM_data_scraping

./: .gitignore  README.md  main.py  pyproject.toml
data/code_du_travail/: IDCC_APE.xls
data/scraping/: articles_links_BOCC.json  articles_links_conventions_etendues.json
data/scraping/cleaned/: no_pdf_bocc.json  no_pdf_cleaned_conventions_etendues.json  pdf_bocc.json  pdf_cleaned_conventions_etendues.json
src/: links_preprocessing.py  links_scraping.py  links_scraping_BOCC.py  links_scraping_conventions_etendues.py  no_pdf_bocc.py  no_pdf_conventions_etendues_download.py  pdf_bocc.py  pdf_conventions_etendues_download.py  utils.py
